--- a/src/app/matrix/technique-cell/contextmenu/contextmenu.component.scss
+++ b/src/app/matrix/technique-cell/contextmenu/contextmenu.component.scss
@@ -32,9 +32,38 @@
             }
             .contextMenu-button {
                 cursor: pointer;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
                 &:hover {
                     @include adaptive-color('background', color(cell-highlight-color), darken(color(cell-highlight-dark-color), 10%));
                 }
+            }
+            
+            .contextMenu-sub-button {
+                font-size: 0.9em;
+                padding-left: 12px !important;
+                opacity: 0.8;
+                &:hover {
+                    opacity: 1;
+                }
+            }
+            
+            .contextMenu-button-container {
+                .contextMenu-button {
+                    border-radius: 0;
+                }
+                
+                .contextMenu-sub-button {
+                    border-top: 1px solid rgba(255, 255, 255, 0.2);
+                    margin-top: 1px;
+                }
+            }
+            
+            .offline-indicator {
+                font-size: 0.8em;
+                opacity: 0.7;
+                margin-left: 4px;
             }
         }
     }
