--- a/src/app/matrix/technique-cell/contextmenu/contextmenu.component.html
+++ b/src/app/matrix/technique-cell/contextmenu/contextmenu.component.html
@@ -31,7 +31,9 @@
             <div class="contextMenu-button-container">
                 <div class="contextMenu-button" (click)="viewTechnique()">
                     <span>view technique</span>
-                    <span *ngIf="techniqueOfflineAvailable" class="offline-indicator" title="Available offline">📱</span>
+                    <span *ngIf="techniqueOfflineAvailable" class="offline-indicator" title="Available offline">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="12px" viewBox="0 -960 960 960" width="12px" fill="#e3e3e3"><path d="M320-280h320v-80H320v80Zm118-120 226-226-57-55-169 169-86-86-56 56 142 142Zm42 320q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg>
+                    </span>
                 </div>
                 <div *ngIf="techniqueOfflineAvailable" class="contextMenu-button contextMenu-sub-button" (click)="viewTechnique(true)" title="View online version">
                     view technique (online)
@@ -40,7 +42,9 @@
             <div class="contextMenu-button-container">
                 <div class="contextMenu-button" (click)="viewTactic()">
                     <span>view tactic</span>
-                    <span *ngIf="tacticOfflineAvailable" class="offline-indicator" title="Available offline">📱</span>
+                    <span *ngIf="tacticOfflineAvailable" class="offline-indicator" title="Available offline">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="12px" viewBox="0 -960 960 960" width="12px" fill="#e3e3e3"><path d="M320-280h320v-80H320v80Zm118-120 226-226-57-55-169 169-86-86-56 56 142 142Zm42 320q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg>
+                    </span>
                 </div>
                 <div *ngIf="tacticOfflineAvailable" class="contextMenu-button contextMenu-sub-button" (click)="viewTactic(true)" title="View online version">
                     view tactic (online)
